# zown

./: .gitignore  PAST.md  README.md  pyproject.toml
conformance/: README.md  ast_parity.py  ir_roundtrip.py  run.py  v2.py  vm_parity.py  wasm_parity.py
conformance/cases/: arith.out  arith.zn  compare.zn  convert.out  convert.zn  fib.zn  fizzbuzz.zn  hello.zn  logic.zn  select.zn  stackops.out  stackops.zn  strings.out  strings.zn  while.zn  words_math.out  words_math.zn  words_str.out  words_str.zn
conformance/cases_v2/: caps_grant.out  caps_grant.zn  caps_nested.out  caps_nested.zn  match_type.out  match_type.zn  match_value.zn  num_check.out  num_check.zn  num_sat.out  num_sat.zn  num_wrap.out  num_wrap.zn  vec_ops.out  vec_ops.zn  vec_wrap.zn
conformance/errors/: divzero.code  notcallable.code  notcallable.zn  reserved_pipe.code  typemismatch.code  typemismatch.zn  underflow.code  unresolved.code
conformance/errors_v2/: caps_badtype.code  caps_badtype.zn  caps_denied.code  caps_denied.zn  caps_denied_scope.zn  match_badpat.code  match_badpat.zn  match_none.code  match_none.zn  match_odd.zn  num_badwidth.zn  num_frac.code  num_frac.zn  num_overflow.code  num_overflow.zn  vec_arity.code  vec_arity.zn  vec_mismatch.code  vec_mismatch.zn
docs/: DESIGN.md  IR.md  MANIFEST.md  PLAN.md  ROADMAP.md  SPEC.md  WASM.md
examples/: fib.zn  fizzbuzz.zn  hello.zn
tests/: test_examples.py  test_zown.py
zown/: __init__.py  builtins.py  checker.py  cli.py  errors.py  lexer.py  manifest.py  parser.py  vm.py
zownc/: Cargo.toml  README.md
zownc/crates/zown-ast/: Cargo.toml
zownc/crates/zown-ast/src/: lib.rs
zownc/crates/zown-cli/: Cargo.toml
zownc/crates/zown-cli/src/: main.rs
zownc/crates/zown-ir/: Cargo.toml
zownc/crates/zown-ir/src/: lib.rs
zownc/crates/zown-lexer/: Cargo.toml
zownc/crates/zown-lexer/src/: lib.rs
zownc/crates/zown-parser/: Cargo.toml
zownc/crates/zown-parser/src/: lib.rs
zownc/crates/zown-vm/: Cargo.toml
zownc/crates/zown-vm/src/: error.rs  lib.rs  value.rs
zownc/crates/zown-wasm/: Cargo.toml
zownc/crates/zown-wasm/src/: lib.rs
