[workspace]
resolver = "2"
members = [
    "crates/zown-lexer",
    "crates/zown-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zown"]
repository = "https://github.com/GTOVD/zown"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
