[package]
name = "zown-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The `zownc` native toolchain driver."

[[bin]]
name = "zownc"
path = "src/main.rs"

[dependencies]
zown-lexer = { path = "../zown-lexer" }
zown-ast = { path = "../zown-ast" }
zown-parser = { path = "../zown-parser" }
zown-ir = { path = "../zown-ir" }
zown-vm = { path = "../zown-vm" }
zown-wasm = { path = "../zown-wasm" }
