[package]
name = "zown-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zown stack VM (Rust): tree-walking interpreter, ported from the Python reference."

[lib]
path = "src/lib.rs"

[dependencies]
zown-ast = { path = "../zown-ast" }
zown-parser = { path = "../zown-parser" }
