[package]
name = "zown-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zown WASM backend: lowers Zown IR to WebAssembly text (.wat) and binary (.wasm)."

[lib]
path = "src/lib.rs"

[dependencies]
zown-ir = { path = "../zown-ir" }
wat = "1"
